//
//  ToastItemType.swift
//  ©️ 2023 0100
//

import Foundation

enum ToastItemType: String {
    case notInWordList = "Not in word list"
    case notEnoughLetters = "Not enough letters"
    case winGenius = "Genius"
    case winMagnificent = "Magnificent"
    case winImpressive = "Impressive"
    case winSplendid = "Splendid"
    case winGreat = "Great"
    case winPhew = "Phew"
}
