...
        self.labelView = labelView
        
        let tapGesture = UITapGestureRecognizer()
        tapGesture.addTarget(self, action: #selector(didTapKey))
        self.addGestureRecognizer(tapGesture)
        
        self.accessibilityLabel = "Key_" + (self.key?.rawValue ?? "")
        update()
    }
    
    @objc private func didTapKey() {
        guard let key = self.key else { return }
        self.delegate?.didSelect(key: key)
...
